--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,15 @@
                     Y este es el parrafo de inicio donde vamos a explicar 
                     las cosas increéibles que se pueden hacer con ramas
                 </p>
+                <p>Los blogs son la mejor 
+                    forma de compartir información 
+                    y tus  ideas.
+                    Mucho más que ir a conferencias 
+                    o salir en Youtube.
+                    Excepto si eres un rockstart. 
+                    Pero estátisticamente 
+                    no lo eres por ahora.
+                </p>
             </div>
         </div>
     </body>
