--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline"> Tu blog de 
-                confianza <span>
+                maestro <span>
             </div>>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
@@ -25,6 +25,7 @@
                     Pero estátisticamente 
                     no lo eres por ahora.
                 </p>
+                <p>Suscribite y dale like</p>
             </div>
         </div>
     </body>
